--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -5,19 +5,19 @@
 // Agena
 @PART[bluedog_Agena*,bluedog_agena*]:First
 {
-	%isHypergolic = True
+	%Hypergolic = True
 }
 
 // Apollo
 @PART[bluedog_Apollo*,bluedog_LEM*]:First
 {
-	%isHypergolic = True
+	%Hypergolic = True
 }
 
 // Delta
 @PART[bluedog_DeltaK*]:First
 {
-	%isHypergolic = True
+	%Hypergolic = True
 }
 
 // Todo Early Rockets
@@ -25,104 +25,11 @@
 // Juno
 @PART[bluedog_Juno_Engine6K,bluedog_Juno_Engine45K,bluedog_Juno_UpperTank*]:First
 {
-	%isHypergolic = True
+	%Hypergolic = True
 }
 
 // Titan
 @PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:First
 {
-	%isHypergolic = True
-}
-
-// Add the fuel type to all tanks. Must be done at :AFTER[Bluedog_DB_1]
-@PART[bluedog*,Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[Bluedog_DB_1]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
-	{
-		SUBTYPE
-		{
-			name = Hypergolic
-			tankType = bdbAZ50NTO
-			addedMass = #$../../tank_mass$
-			@addedMass *= -1
-			addedCost = #$../../tank_plus_fuel_cost$
-			@addedCost *= -1
-			percentFilled = #$../../fuelPctFill$
-		}
-	}
-}
-
-// Engine and tank setup
-@PART[bluedog*,Bluedog*]:HAS[#isHypergolic[True]]:AFTER[Bluedog_DB_2]
-{
-	// Changes the default fuel
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
-	{
-		%currentSubtype = Hypergolic
-	}
-	
-	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
-	@MODULE[ModuleEngines*],*
-	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = Aerozine50
-		}
-		@PROPELLANT[Oxidizer]
-		{
-			@name = NTO
-		}
-	}
-	
-	// Not present in tanks, but some engines have fuel onboard
-	@RESOURCE[LiquidFuel]
-	{
-		@name = Aerozine50
-		@amount *= 5
-		@maxAmount *= 5
-	}
-	@RESOURCE[Oxidizer]
-	{
-		@name = NTO
-		@amount *= 5
-		@maxAmount *= 5
-	}
-}
-
-
-// Special setups
-
-// Reduce default fill for Titan
-// We want 83.16%, the resource bar only does 10% increments
-@PART[bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[Bluedog_DB_2]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
-	{
-		@SUBTYPE[Hypergolic]
-		{
-			%percentFilled = 80
-		}
-	}
-}
-
-// Agena D tank uses a Balloon type to get the reduced weight vs Agena B
-@PART[bluedog_agenaLongTank]:AFTER[Bluedog_DB_2]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
-	{
-		%currentSubtype = Hypergolic Balloon
-		@SUBTYPE[Hypergolic]
-		{
-			@name = Hypergolic Balloon
-			@tankType = bdbAZ50NTOBalloon
-		}
-	}
-}
-
-
-
-// Cleanup
-@PART[bluedog*,Bluedog*]:HAS[#isHypergolic[*]]:FOR[zzzBluedog_DB_9]
-{
-	!isHypergolic = delete
+	%Hypergolic = True
 }
