--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -2,34 +2,47 @@
 // Basically stolen from Jsolson in BDB issue #552
 
 // Tag hypergolic parts :First so it carries over to +PART copies
+
+//Able(star)
+@PART[bluedog_able*]:FIRST
+{
+	%Hypergolic = True
+}
 // Agena
-@PART[bluedog_Agena*,bluedog_agena*]:First
+@PART[bluedog_Agena*,bluedog_agena*]:FIRST
 {
 	%Hypergolic = True
 }
 
 // Apollo
-@PART[bluedog_Apollo*,bluedog_LEM*]:First
+@PART[bluedog_Apollo*,bluedog_LEM*]:FIRST
 {
 	%Hypergolic = True
 }
 
 // Delta
-@PART[bluedog_DeltaK*]:First
+@PART[bluedog_DeltaK*|bluedog_AJ10*|bluedog_TR_201]:FIRST
 {
 	%Hypergolic = True
 }
 
-// Todo Early Rockets
-
+//Gemini
+@PART[bluedog_Gemini_Lander*]:FIRST
+{
+	%Hypergolic = True
+}
 // Juno
-@PART[bluedog_Juno_Engine6K,bluedog_Juno_Engine45K,bluedog_Juno_UpperTank*]:First
+@PART[bluedog_Juno_Engine6K,bluedog_Juno_Engine45K,bluedog_Juno_UpperTank*]:FIRST
 {
 	%Hypergolic = True
 }
-
+//LDC
+@PART[bluedog_LDC_S1*]:FIRST
+{
+	%Hypergolic = True
+}
 // Titan
-@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:First
+@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:FIRST
 {
 	%Hypergolic = True
 }
