--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -4,45 +4,45 @@
 // Tag hypergolic parts :First so it carries over to +PART copies
 
 //Able(star)
-@PART[bluedog_able*]:FIRST
+@PART[bluedog_able*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 // Agena
-@PART[bluedog_Agena*,bluedog_agena*]:FIRST
+@PART[bluedog_Agena*,bluedog_agena*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 
 // Apollo
-@PART[bluedog_Apollo*,bluedog_LEM*]:FIRST
+@PART[bluedog_Apollo*,bluedog_LEM*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 
 // Delta
-@PART[bluedog_DeltaK*|bluedog_AJ10*|bluedog_TR_201]:FIRST
+@PART[bluedog_DeltaK*|bluedog_AJ10*|bluedog_TR_201]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 
 //Gemini
-@PART[bluedog_Gemini_Lander*]:FIRST
+@PART[bluedog_Gemini_Lander*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 // Juno
-@PART[bluedog_Juno_Engine6K,bluedog_Juno_Engine45K,bluedog_Juno_UpperTank*]:FIRST
+@PART[bluedog_Juno_Engine6K,bluedog_Juno_Engine45K,bluedog_Juno_UpperTank*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 //LDC
-@PART[bluedog_LDC_S1*]:FIRST
+@PART[bluedog_LDC_S1*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
 // Titan
-@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:FIRST
+@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
