--- a/GameData/StockalikeHypergols/Patches/setupUtil.cfg
+++ b/GameData/StockalikeHypergols/Patches/setupUtil.cfg
@@ -22,7 +22,7 @@ B9_TANK_TYPE
 {
 	!StockalikeHypergolPlaceholder = delete
 }
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:HAS[#Hypergolic[True]]:AFTER[zzzHypergolUtil_1]
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
