--- a/GameData/StockalikeHypergols/Patches/Stock.cfg
+++ b/GameData/StockalikeHypergols/Patches/Stock.cfg
@@ -2,3 +2,17 @@
 {
   %Hypergolic = True
 }
++PART[FuelCell]
+{
+  @ModuleResourceConverter
+  {
+    @INPUT_RESOURCE:HAS[#ResourceName[LiquidFuel]]
+    {
+      @ResourceName = Aerozine50
+    }
+    @INPUT_RESOURCE:HAS[#ResourceName[Oxidizer]]
+    {
+      @ResourceName = NitrogenTetroxide
+    }
+  }
+}
