--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -4,7 +4,7 @@
 // Tag hypergolic parts :First so it carries over to +PART copies
 
 //Able(star)
-@PART[bluedog_able*]:FIRST:NEEDS[Bluedog_DB]
+@PART[bluedog_able*|bluedog_Able]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
@@ -31,8 +31,8 @@
 {
 	%Hypergolic = True
 }
-// Juno
-@PART[bluedog_Juno_Engine6K,bluedog_Juno_Engine45K,bluedog_Juno_UpperTank*]:FIRST:NEEDS[Bluedog_DB]
+// Juno/Jupiter
+@PART[bluedog_Juno*|bluedog_Jupiter*|bluedog_Redstone*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
@@ -42,7 +42,34 @@
 	%Hypergolic = True
 }
 // Titan
-@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:FIRST:NEEDS[Bluedog_DB]
+@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier|bluedog_LR87_11_Single|bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
+//Experimental attempt to get the secondary variant of the LR-87/91s to run on kerolox like the flavor text says they should. Not working as of now.
+//@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier]:NEEDS[Bluedog_DB]
+//}
+//	@MODULE:HAS[#name[ModuleB9PartSwitch]]
+//	{
+//		@SUBTYPE:HAS[#defaultSubtypePriority[1]]
+//		//Janky, but best way for now of determining the default subtype.
+//		{
+//			@MODULE:HAS[@DATA]
+//			{
+//				@DATA
+//				{
+//					@PROPELLANT:HAS[#name[Aerozine50]
+//					{
+//						@name = LiquidFuel
+//						@ratio = 0.9
+//					}
+//					@PROPELLANT:HAS[#name[NTO]]
+//					{
+//						@name = Oxidizer
+//						@ratio = 1.1
+//					}
+//				}
+//			}
+//		}
+//	}
+//}
