--- a/GameData/StockalikeHypergols/Patches/setupUtil.cfg
+++ b/GameData/StockalikeHypergols/Patches/setupUtil.cfg
@@ -1,17 +1,23 @@
 B9_TANK_TYPE
 {
 	name = AZ50NTO
-	tankMass = 0.00085
-	tankCost = 0.7
+	primaryColor = PurpleBrown
+	secondaryColor = SalmonPink
+	//I picked ugly colors because hypergols are disgusting.
+	tankMass = 0.0004
+	tankCost = 0.9
+	percentFilled = 100
 	RESOURCE
 	{
 		name = Aerozine50
 		unitsPerVolume = 2.25
+		percentFilled = 100
 	}
 	RESOURCE
 	{
 		name = NTO
 		unitsPerVolume = 2.75
+		percentFilled = 100
 	}
 }
 @PART[*]:FOR[zzzHypergolUtil_1]
@@ -30,23 +36,16 @@ B9_TANK_TYPE
 		{
 			name = Hypergolic
 			tankType = AZ50NTO
-			addedMass = #$../../tank_mass$
-			@addedMass *= -1
-			addedCost = #$../../tank_plus_fuel_cost$
-			@addedCost *= -1
-			percentFilled = #$../../fuelPctFill$
 		}
 	}
 }
 // Engine and tank setup
 @PART[*]:HAS[#Hypergolic[True]]:AFTER[zzzHypergolUtil_2]
 {
-	// Changes the default fuel
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleId[fuelSwitch]]
 	{
 		%currentSubtype = Hypergolic
 	}
-	
 	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
 	@MODULE[ModuleEngines*],*
 	{
@@ -59,7 +58,6 @@ B9_TANK_TYPE
 			@name = NTO
 		}
 	}
-	
 	// Not present in tanks, but some engines have fuel onboard
 	@RESOURCE[LiquidFuel]
 	{
