--- a/GameData/StockalikeHypergols/Patches/NFSpacecraft.cfg
+++ b/GameData/StockalikeHypergols/Patches/NFSpacecraft.cfg
@@ -1,5 +1,5 @@
 //I am intentionally leaving the SuperDraco-like engines alone, even thought they should be converted. The main fuel source for these is MonoProp inside command pods that would be useful for RCS. And changing RCS mixtures is way out of scope.
-@PART[orbital-engine-0625|orbital-engine-125|orbital-engine-25|3.75m orbital engine]:FIRST:NEEDS[NearFutureSpacecraft]
+@PART[orbital-engine-0625|orbital-engine-125|orbital-engine-25|orbital-engine-375]:FIRST:NEEDS[NearFutureSpacecraft]
 {
   %Hypergolic = True
 }
