--- a/GameData/StockalikeHypergols/Patches/Stock.cfg
+++ b/GameData/StockalikeHypergols/Patches/Stock.cfg
@@ -1,10 +1,13 @@
-@PART[liquidEngineLV-1|liquidEngineLV-1R]:FIRST
+@PART[microEngine|radialEngineMini]:FIRST
 {
   %Hypergolic = True
 }
 +PART[FuelCell]
 {
+  @name = StockalikeHypergolsFuelCell
+  @description = Uses AZ50 and NTO to make EC. Cloned part courtesy of the UAKCC, lobbying division.
   @ModuleResourceConverter
+  @title = Hypergolic Fuel Cell
   {
     @INPUT_RESOURCE:HAS[#ResourceName[LiquidFuel]]
     {
