--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -1,6 +1,6 @@
 B9_TANK_TYPE
 {
-	name = AZ50NTO
+	name = Hypergolic
 	primaryColor = PurpleBrown
 	secondaryColor = SalmonPink
 	//I picked ugly colors because hypergols are disgusting.
@@ -9,13 +9,13 @@ B9_TANK_TYPE
 	percentFilled = 100
 	RESOURCE
 	{
-		name = Aerozine50
+		name = Heptyl
 		unitsPerVolume = 2.25
 		percentFilled = 100
 	}
 	RESOURCE
 	{
-		name = NTO
+		name = Amyl
 		unitsPerVolume = 2.75
 		percentFilled = 100
 	}
@@ -35,7 +35,7 @@ B9_TANK_TYPE
 		SUBTYPE
 		{
 			name = Hypergolic
-			tankType = AZ50NTO
+			tankType = Hypergolic
 		}
 	}
 }
@@ -51,23 +51,23 @@ B9_TANK_TYPE
 	{
 		@PROPELLANT[LiquidFuel]
 		{
-			@name = Aerozine50
+			@name = Heptyl
 		}
 		@PROPELLANT[Oxidizer]
 		{
-			@name = NTO
+			@name = Amyl
 		}
 	}
 	// Not present in tanks, but some engines have fuel onboard
 	@RESOURCE[LiquidFuel]
 	{
-		@name = Aerozine50
+		@name = Heptyl
 		@amount *= 5
 		@maxAmount *= 5
 	}
 	@RESOURCE[Oxidizer]
 	{
-		@name = NTO
+		@name = Amyl
 		@amount *= 5
 		@maxAmount *= 5
 	}
