--- a/GameData/StockalikeHypergols/resourceDefs.cfg
+++ b/GameData/StockalikeHypergols/resourceDefs.cfg
@@ -1,8 +1,8 @@
 //These fuels have the same densities etc as their counterparts from Real Fuels just for consistency's sake, and if you want to personally change the patch to use CRP resources it won't be unbalanced.
 RESOURCE_DEFINITION
 {
-    name = Amyl
-	  displayName = Amyl
+    name = Amythyst
+	  displayName = Amythyst
     density = 0.00145
     unitCost = 0.2175
     hsp = 1521.6 
@@ -13,8 +13,8 @@ RESOURCE_DEFINITION
 }
 RESOURCE_DEFINITION
 {
-    name = Heptyl
-	  displayName = Heptyl
+    name = Methyl
+	  displayName = Methyl
     density = 0.0009
     unitCost = 1.35
     hsp = 2970.1
