--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -9,13 +9,13 @@ B9_TANK_TYPE
 	percentFilled = 100
 	RESOURCE
 	{
-		name = Heptyl
+		name = Amythyst
 		unitsPerVolume = 2.25
 		percentFilled = 100
 	}
 	RESOURCE
 	{
-		name = Amyl
+		name = Methyl
 		unitsPerVolume = 2.75
 		percentFilled = 100
 	}
@@ -51,23 +51,23 @@ B9_TANK_TYPE
 	{
 		@PROPELLANT[LiquidFuel]
 		{
-			@name = Heptyl
+			@name = Methyl
 		}
 		@PROPELLANT[Oxidizer]
 		{
-			@name = Amyl
+			@name = Amythyst
 		}
 	}
 	// Not present in tanks, but some engines have fuel onboard
 	@RESOURCE[LiquidFuel]
 	{
-		@name = Heptyl
+		@name = Methyl
 		@amount *= 5
 		@maxAmount *= 5
 	}
 	@RESOURCE[Oxidizer]
 	{
-		@name = Amyl
+		@name = Amythyst
 		@amount *= 5
 		@maxAmount *= 5
 	}
