fix bracket on Bluedog.cfg

--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -58,7 +58,7 @@ Experimental attempt to get the secondary variant of the LR-87/91s to run on ker
 			{
 				@DATA
 				{
-					@PROPELLANT:HAS[#name[Aerozine50]
+					@PROPELLANT:HAS[#name[Aerozine50]]
 					{
 						%name = LiquidFuel
 						%ratio = 0.9
