--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -56,7 +56,7 @@ Experimental attempt to get the secondary variant of the LR-87/91s to run on ker
 		{
 			@MODULE:HAS[@DATA]
 			{
-				@DATA
+				@DATA:HAS[@PROPELLANT]
 				{
 					@PROPELLANT:HAS[#name[Aerozine50]]
 					{
@@ -67,6 +67,19 @@ Experimental attempt to get the secondary variant of the LR-87/91s to run on ker
 					{
 						%name = Oxidizer
 						%ratio = 1.1
+					}
+				}
+				@DATA:HAS[!PROPELLANT]
+				{
+					PROPELLANT
+					{
+						name = LiquidFuel
+						ratio = 0.9
+					}
+					PROPELLANT
+					{
+						name = Oxidizer
+						ratio = 1.1
 					}
 				}
 			}
