--- a/GameData/StockalikeHypergols/Patches/setupUtil.cfg
+++ b/GameData/StockalikeHypergols/Patches/setupUtil.cfg
@@ -72,3 +72,26 @@ B9_TANK_TYPE
 		@maxAmount *= 5
 	}
 }
+@PART[*]:HAS[#MPHypergolic[True]]:AFTER[zzzHypergolUtil_2]
+{
+	@MODULE[MODULEB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
+	{
+		%currentSubtype = Hypergolic
+	}
+	@MODULE[ModuleEngines],*
+	{
+		@PROPELLANT[MonoPropellant]
+		{
+			@name = Aerozine50
+			@ratio = 2.25
+		}
+		PROPELLANT
+		{
+			name = NTO
+			ratio = 2.75
+		}
+	}
+//This is missing the line that converts engines storing monoprop tagged hypergolic to the resources they burn.
+//Some engines might have it for RCS, not burning, and the only real side effect is that engines that meet those criteria
+//(especially Tantares) might have to add some fuel tanks to do that.
+}
