--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -72,15 +72,16 @@ B9_TANK_TYPE
 		@maxAmount *= 5
 	}
 }
+// Template for monoprop engines
 @PART[*]:HAS[#MPHypergolic[True]]:AFTER[zzzHypergolUtil_2]
 {
 	@MODULE[MODULEB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
 		%currentSubtype = Hypergolic
 	}
-	@MODULE[ModuleEngines],*
+	@MODULE[ModuleEngines*],*
 	{
-		@PROPELLANT[MonoPropellant]
+		@PROPELLANT:HAS[#name[MonoPropellant]]
 		{
 			@name = Aerozine50
 			@ratio = 2.25
