ModuleB9PartSwitch subtype only when no Oxygen present

--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -30,7 +30,7 @@ B9_TANK_TYPE
 }
 @PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]
 {
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch],!SUBTYPE[Oxygen]]
 	{
 		SUBTYPE
 		{
