--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -1,6 +1,6 @@
 B9_TANK_TYPE
 {
-	name = Hypergolic
+	name = SHHypergolic
 	primaryColor = PurpleBrown
 	secondaryColor = SalmonPink
 	//I picked ugly colors because hypergols are disgusting.
@@ -34,8 +34,8 @@ B9_TANK_TYPE
 	{
 		SUBTYPE
 		{
-			name = Hypergolic
-			tankType = Hypergolic
+			name = SHHypergolic
+			tankType = SHHypergolic
 		}
 	}
 }
@@ -44,7 +44,7 @@ B9_TANK_TYPE
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleId[fuelSwitch]]
 	{
-		%currentSubtype = Hypergolic
+		%currentSubtype = SHHypergolic
 	}
 	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
 	@MODULE[ModuleEngines*],*
@@ -77,7 +77,7 @@ B9_TANK_TYPE
 {
 	@MODULE[MODULEB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
-		%currentSubtype = Hypergolic
+		%currentSubtype = SHHypergolic
 	}
 	@MODULE[ModuleEngines*],*
 	{
