--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -86,3 +86,18 @@ Experimental attempt to get the secondary variant of the LR-87/91s to run on ker
 		}
 	}
 }
+//Transtage tanks
+@PART[bluedog_Titan_Transtage]:FIRST:NEEDS[Bluedog_DB]
+{
+	@MODULE:HAS[#switcherDescription[Engine Config]
+	{
+		@SUBTYPE:HAS[#name[Transtage]]
+		{
+			@tankType = SHHypergolic
+		}
+		@SUBTYPE:HAS[#name[Transtage-34D]]
+		{
+			@tankType = SHHypergolic
+		}
+	}
+}
