--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -32,7 +32,7 @@
 	%Hypergolic = True
 }
 // Juno/Jupiter
-@PART[bluedog_Juno*|bluedog_Jupiter*|bluedog_Redstone*]:FIRST:NEEDS[Bluedog_DB]
+@PART[bluedog_Juno*|bluedog_Jupiter*|bluedog_Redstone*]:HAS![#name[bluedog_Jupiter_Vernier:FIRST:NEEDS[Bluedog_DB]
 {
 	%Hypergolic = True
 }
