--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -6,45 +6,45 @@
 //Able(star)
 @PART[bluedog_able*|bluedog_Able]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 // Agena
 @PART[bluedog_Agena*,bluedog_agena*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 
 // Apollo
 @PART[bluedog_Apollo*,bluedog_LEM*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 
 // Delta
 @PART[bluedog_DeltaK*|bluedog_AJ10*|bluedog_TR_201]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 
 //Gemini
 @PART[bluedog_Gemini_Lander*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 // Juno/Jupiter
 @PART[bluedog_Juno*|bluedog_Jupiter*|bluedog_Redstone*]:HAS![#name[bluedog_Jupiter_Vernier:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 //LDC
 @PART[bluedog_LDC_S1*]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 // Titan
 @PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier|bluedog_LR87_11_Single|bluedog_LR91_5,bluedog_LR91_11,bluedog_Titan2*,bluedog_Titan3*,bluedog_Titan4*|bluedog_Titan_Transtage]:FIRST:NEEDS[Bluedog_DB]
 {
-	%Hypergolic = True
+	%SHHypergolic = True
 }
 Experimental attempt to get the secondary variant of the LR-87/91s to run on kerolox like the flavor text says they should. Not working as of now.
 @PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier]:NEEDS[Bluedog_DB]
