--- a/GameData/StockalikeHypergols/Patches/MH.cfg
+++ b/GameData/StockalikeHypergols/Patches/MH.cfg
@@ -1,4 +1,4 @@
 @PART[LiquidEngineRE-J10|LiquidEngineLV-T91|LiquidEngineLV-TX87]:FIRST:NEEDS[SquadExpansion/MakingHistory]
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
