--- a/GameData/StockalikeHypergols/Patches/ReStock+.cfg
+++ b/GameData/StockalikeHypergols/Patches/ReStock+.cfg
@@ -1,8 +1,8 @@
 @PART[restock-engine-125-pug]:FIRST:NEEDS[RestockPlus]
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
 @PART[restock-engine-caravel-1|restock-engine-schnauzer-1]:FIRST:NEEDS[RestockPlus&!SquadExpansion/MakingHistory]
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
