--- a/GameData/StockalikeHypergols/Patches/SOCK+REdirect.cfg
+++ b/GameData/StockalikeHypergols/Patches/SOCK+REdirect.cfg
@@ -1,10 +1,10 @@
 @PART[DIRECT_KJ10]:FIRST:NEEDS[Benjee10_SharedAssets]
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
 @PART[benjee10_shuttle_aftFuselage|benjee10_shuttle_midFuselage]:FIRST:NEEDS[Benjee10_ShuttleOrbiter]
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
 @PART[benjee10_shuttle_midFueselage]:FIRST:NEEDS[Benjee10_ShuttleOrbiter]
 {
@@ -23,5 +23,5 @@
   
 @PART[DIRECT_orion_ServiceModule]:FIRST:NEEDS[reDIRECT]
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
