--- a/GameData/StockalikeHypergols/Patches/SOCK+REdirect.cfg
+++ b/GameData/StockalikeHypergols/Patches/SOCK+REdirect.cfg
@@ -6,21 +6,7 @@
 {
   %SHHypergolic = True
 }
-@PART[benjee10_shuttle_midFueselage]:FIRST:NEEDS[Benjee10_ShuttleOrbiter]
-{
-  @MODULE:HAS[#Name[ModuleResourceConverter]]
-  {
-    @INPUT_RESOURCE:HAS[#ResourceName[LiquidFuel]]
-    {
-      @ResourceName = Aerozine50
-    }
-    @INPUT_RESOURC:HAS[#ResourceName[Oxidizer]]
-    {
-      @ResourceName = NitrogenTetroxide
-    }
-  }
-}
-  
+// no patch for fuel cells, bring your own fuels.
 @PART[DIRECT_orion_ServiceModule]:FIRST:NEEDS[reDIRECT]
 {
   %SHHypergolic = True
