--- a/GameData/StockalikeHypergols/Patches/Stock.cfg
+++ b/GameData/StockalikeHypergols/Patches/Stock.cfg
@@ -1,6 +1,6 @@
 @PART[microEngine|radialEngineMini]:FIRST
 {
-  %Hypergolic = True
+  %SHHypergolic = True
 }
 +PART[FuelCell]
 {
@@ -15,7 +15,7 @@
     }
     @INPUT_RESOURCE:HAS[#ResourceName[Oxidizer]]
     {
-      @ResourceName = NitrogenTetroxide
+      @ResourceName = NTO
     }
   }
 }
