--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -9,13 +9,13 @@ B9_TANK_TYPE
 	percentFilled = 100
 	RESOURCE
 	{
-		name = Aerozine50
+		name = Aerozine
 		unitsPerVolume = 2.25
 		percentFilled = 100
 	}
 	RESOURCE
 	{
-		name = NTO
+		name = Nitroxide
 		unitsPerVolume = 2.75
 		percentFilled = 100
 	}
@@ -51,23 +51,23 @@ B9_TANK_TYPE
 	{
 		@PROPELLANT[LiquidFuel]
 		{
-			@name = Aerozine50
+			@name = Aerozine
 		}
 		@PROPELLANT[Oxidizer]
 		{
-			@name = NTO
+			@name = Nitroxide
 		}
 	}
 	// Not present in tanks, but some engines have fuel onboard
 	@RESOURCE[LiquidFuel]
 	{
-		@name = Aerozine50
+		@name = Aerozine
 		@amount *= 5
 		@maxAmount *= 5
 	}
 	@RESOURCE[Oxidizer]
 	{
-		@name = NTO
+		@name = Nitroxide
 		@amount *= 5
 		@maxAmount *= 5
 	}
@@ -83,12 +83,12 @@ B9_TANK_TYPE
 	{
 		@PROPELLANT:HAS[#name[MonoPropellant]]
 		{
-			@name = Aerozine50
+			@name = Aerozine
 			@ratio = 2.25
 		}
 		PROPELLANT
 		{
-			name = NTO
+			name = Nitroxide
 			ratio = 2.75
 		}
 	}
