--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -58,12 +58,12 @@ Experimental attempt to get the secondary variant of the LR-87/91s to run on ker
 			{
 				@DATA:HAS[@PROPELLANT]
 				{
-					@PROPELLANT:HAS[#name[Aerozine50]]
+					@PROPELLANT:HAS[#name[Aerozine]]
 					{
 						%name = LiquidFuel
 						%ratio = 0.9
 					}
-					@PROPELLANT:HAS[#name[NTO]]
+					@PROPELLANT:HAS[#name[Nitroxide]]
 					{
 						%name = Oxidizer
 						%ratio = 1.1
