--- a/GameData/StockalikeHypergols/Patches/Stock.cfg
+++ b/GameData/StockalikeHypergols/Patches/Stock.cfg
@@ -11,11 +11,11 @@
   {
     @INPUT_RESOURCE:HAS[#ResourceName[LiquidFuel]]
     {
-      @ResourceName = Aerozine50
+      @ResourceName = Aerozine
     }
     @INPUT_RESOURCE:HAS[#ResourceName[Oxidizer]]
     {
-      @ResourceName = NTO
+      @ResourceName = Nitroxide
     }
   }
 }
