--- a/GameData/StockalikeHypergols/Patches/Tantares.cfg
+++ b/GameData/StockalikeHypergols/Patches/Tantares.cfg
@@ -1,11 +1,11 @@
 //Mir S5.79 engine
-@PART[eridani_engine_s0_1]:FIRST:NEEDS[Tantares]
-{
-  %MPHypergolic = True
-}
+//@PART[eridani_engine_s0_1]:FIRST:NEEDS[Tantares]
+//{
+//  %MPHypergolic = True
+//}
 //FGB, TKS, and derivatives
-@PART[_aquila*]:FIRST:NEEDS[Tantares]
-{
-  %SHHypergolic = True
-}
+//@PART[_aquila*]:FIRST:NEEDS[Tantares]
+//{
+//  %SHHypergolic = True
+//}
 //WORK TODO! NOT READY!!!
