--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -47,7 +47,7 @@ B9_TANK_TYPE
 		%currentSubtype = SHHypergolic
 	}
 	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
-	@MODULE[ModuleEngines*],*
+	@MODULE[ModuleEngine*],*
 	{
 		@PROPELLANT[LiquidFuel]
 		{
