--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -40,7 +40,7 @@ B9_TANK_TYPE
 	}
 }
 // Engine and tank setup
-@PART[*]:HAS[#Hypergolic[True]]:AFTER[zzzHypergolUtil_2]
+@PART[*]:HAS[#SHHypergolic[True]]:AFTER[zzzHypergolUtil_2]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleId[fuelSwitch]]
 	{
