--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -1,6 +1,6 @@
 B9_TANK_TYPE
 {
-	name = SHHypergolic
+	name = Hypergolic
 	primaryColor = PurpleBrown
 	secondaryColor = SalmonPink
 	//I picked ugly colors because hypergols are disgusting.
@@ -34,18 +34,14 @@ B9_TANK_TYPE
 	{
 		SUBTYPE
 		{
-			name = SHHypergolic
-			tankType = SHHypergolic
+			name = Hypergolic
+			tankType = Hypergolic
 		}
 	}
 }
 // Engine and tank setup
 @PART[*]:HAS[#SHHypergolic[True]]:AFTER[zzzHypergolUtil_2]
 {
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleId[fuelSwitch]]
-	{
-		%currentSubtype = SHHypergolic
-	}
 	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
 	@MODULE[ModuleEngine*],*
 	{
@@ -75,10 +71,6 @@ B9_TANK_TYPE
 // Template for monoprop engines
 @PART[*]:HAS[#MPHypergolic[True]]:AFTER[zzzHypergolUtil_2]
 {
-	@MODULE[MODULEB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
-	{
-		%currentSubtype = SHHypergolic
-	}
 	@MODULE[ModuleEngines*],*
 	{
 		@PROPELLANT:HAS[#name[MonoPropellant]]
