--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -4,7 +4,7 @@
 // Tag hypergolic parts :First so it carries over to +PART copies
 
 //Able(star)
-@PART[bluedog_able*|bluedog_Able]:FIRST:NEEDS[Bluedog_DB]
+@PART[bluedog_able*|bluedog_Able*]:FIRST:NEEDS[Bluedog_DB]
 {
 	%SHHypergolic = True
 }
@@ -93,11 +93,11 @@ Experimental attempt to get the secondary variant of the LR-87/91s to run on ker
 	{
 		@SUBTYPE:HAS[#name[Transtage]]
 		{
-			@tankType = SHHypergolic
+			@tankType = Hypergolic
 		}
 		@SUBTYPE:HAS[#name[Transtage-34D]]
 		{
-			@tankType = SHHypergolic
+			@tankType = Hypergolic
 		}
 	}
 }
