--- a/GameData/StockalikeHypergols/Patches/Stock.cfg
+++ b/GameData/StockalikeHypergols/Patches/Stock.cfg
@@ -1,13 +1,17 @@
-@PART[microEngine|radialEngineMini]:FIRST
+@PART[liquidEngine3_v2|microEngine_v2|radialEngineMini_v2]:FIRST
 {
   %SHHypergolic = True
+}
+@PART[omsEngine]:FIRST
+{
+	%MPHypergolic = True
 }
 +PART[FuelCell]
 {
   @name = StockalikeHypergolsFuelCell
   @description = Uses AZ50 and NTO to make EC. Cloned part courtesy of the UAKCC, lobbying division.
-  @ModuleResourceConverter
   @title = Hypergolic Fuel Cell
+  @MODULE[ModuleResourceConverter]
   {
     @INPUT_RESOURCE:HAS[#ResourceName[LiquidFuel]]
     {
