--- a/GameData/StockalikeHypergols/Patches/ReStock+.cfg
+++ b/GameData/StockalikeHypergols/Patches/ReStock+.cfg
@@ -2,7 +2,7 @@
 {
   %SHHypergolic = True
 }
-@PART[restock-engine-caravel-1|restock-engine-schnauzer-1]:FIRST:NEEDS[RestockPlus&!SquadExpansion/MakingHistory]
+@PART[restock-engine-schnauzer-1]:FIRST:NEEDS[RestockPlus&!SquadExpansion/MakingHistory]
 {
   %SHHypergolic = True
 }
