--- a/GameData/StockalikeHypergols/Patches/Bluedog.cfg
+++ b/GameData/StockalikeHypergols/Patches/Bluedog.cfg
@@ -46,13 +46,14 @@
 {
 	%SHHypergolic = True
 }
-Experimental attempt to get the secondary variant of the LR-87/91s to run on kerolox like the flavor text says they should. Not working as of now.
-@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier]:NEEDS[Bluedog_DB]
+
+
+// Kerolox/Hypergolic switchers
+@PART[bluedog_LR87_5,bluedog_LR87_11,bluedog_LR87_11_Single|bluedog_LR87_11_Vac|bluedog_LR91_5|bluedog_LR91_5_FourVernier|bluedog_LR91_11|bluedog_LR91_11_FourVernier|bluedog_Redstone_A7_Bare|bluedog_Redstone_A7_TailUnit]:NEEDS[Bluedog_DB]
 {
 	@MODULE:HAS[#name[ModuleB9PartSwitch]]
 	{
 		@SUBTYPE:HAS[#defaultSubtypePriority[1]]
-		//Janky, but best way for now of determining the default subtype.
 		{
 			@MODULE:HAS[@DATA]
 			{
