Update and rename Peroxide.cfg to HydrogenPeroxide.cfg

--- a/GameData/StockalikeHypergols/Resources/HydrogenPeroxide.cfg
+++ b/GameData/StockalikeHypergols/Resources/HydrogenPeroxide.cfg
@@ -1,8 +1,8 @@
 // Copied verbatim from CRP, with name changed.
 RESOURCE_DEFINITION
 {
-    name = Peroxide
-	displayName = Peroxide
+    name = HydrogenPeroxide
+	displayName = HydrogenPeroxide
     density = 0.001431
     unitCost = 2.1465
     hsp = 2721
