--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -20,6 +20,20 @@ B9_TANK_TYPE
 		percentFilled = 100
 	}
 }
+B9_TANK_TYPE
+{
+	name = HydrogenPeroxide
+	primaryColor = CarolinaBlue
+	tankMass = 0.0004
+	tankCost = 0.9
+	percentFilled = 100
+	RESOURCE
+	{
+		name = HydrogenPeroxide
+		unitsPerVolume = 3.4940601
+		percentFilled = 100
+	}
+}
 @PART[*]:FOR[zzzHypergolUtil_1]
 {
 	%StockalikeHypergolPlaceholder = True
@@ -36,6 +50,17 @@ B9_TANK_TYPE
 		{
 			name = Hypergolic
 			tankType = Hypergolic
+		}
+	}
+}
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]
+{
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch],!SUBTYPE[Oxygen]]
+	{
+		SUBTYPE
+		{
+			name = HydrogenPeroxide
+			tankType = HypdrogenPeroxide
 		}
 	}
 }
@@ -87,4 +112,17 @@ B9_TANK_TYPE
 //This is missing the line that converts engines storing monoprop tagged hypergolic to the resources they burn.
 //Some engines might have it for RCS, not burning, and the only real side effect is that engines that meet those criteria
 //(especially Tantares) might have to add some fuel tanks to do that.
+}
+
+// HTP Engines (will treat them as only using HTP regardless of their historical fuels)
+@PART[*]:HAS[#SHPeroxide[True]]:AFTER[zzzHypergolUtil_2]
+{
+	@MODULE[ModuleEngine*],*
+	{
+		@PROPELLANT[LiquidFuel]
+		{
+			@name = HydrogenPeroxide
+		}
+		!PROPELLANT[Oxidizer] { }
+	}
 }
