--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -60,7 +60,7 @@ B9_TANK_TYPE
 		SUBTYPE
 		{
 			name = HydrogenPeroxide
-			tankType = HypdrogenPeroxide
+			tankType = HydrogenPeroxide
 		}
 	}
 }
