--- a/GameData/StockalikeHypergols/Resources/Aerozine.cfg
+++ b/GameData/StockalikeHypergols/Resources/Aerozine.cfg
@@ -3,6 +3,7 @@ RESOURCE_DEFINITION
 {
     name = Aerozine
 	displayName = Aerozine
+	abbreviation = AZ
     density = 0.0009
     unitCost = 1.35
     hsp = 2970.1
