--- a/GameData/StockalikeHypergols/Resources/HydrogenPeroxide.cfg
+++ b/GameData/StockalikeHypergols/Resources/HydrogenPeroxide.cfg
@@ -3,6 +3,7 @@ RESOURCE_DEFINITION
 {
     name = HydrogenPeroxide
 	displayName = HydrogenPeroxide
+	abbreviation = Peroxide
     density = 0.001431
     unitCost = 2.1465
     hsp = 2721
