--- a/GameData/StockalikeHypergols/Resources/Nitroxide.cfg
+++ b/GameData/StockalikeHypergols/Resources/Nitroxide.cfg
@@ -3,6 +3,7 @@ RESOURCE_DEFINITION
 {
     name = Nitroxide
 	displayName = Nitroxide
+	abbreviation = NRT
     density = 0.00145
     unitCost = 0.2175
     hsp = 1521.6
