--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -23,7 +23,7 @@ B9_TANK_TYPE
 B9_TANK_TYPE
 {
 	name = HydrogenPeroxide
-	primaryColor = CarolinaBlue
+	primaryColor = LightLightBlue
 	tankMass = 0.0004
 	tankCost = 0.9
 	percentFilled = 100
