Cleanup of tank switching

--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -42,28 +42,43 @@ B9_TANK_TYPE
 {
 	!StockalikeHypergolPlaceholder = delete
 }
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:AFTER[zzzHypergolUtil_1]
 {
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch],!SUBTYPE[Oxygen]]
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
 		SUBTYPE
 		{
 			name = Hypergolic
 			tankType = Hypergolic
 		}
-	}
-}
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]
-{
-	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch],!SUBTYPE[Oxygen]]
-	{
 		SUBTYPE
 		{
 			name = HydrogenPeroxide
 			tankType = HydrogenPeroxide
 		}
+
 	}
 }
+@PART[bluedog*|Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]:NEEDS[Bluedog_DB]
+// they have their own B9 tank types for use with their parts
+{
+	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
+	{
+		SUBTYPE
+		{
+			name = Hypergolic
+			tankType = Hypergolic
+		}
+		SUBTYPE
+		{
+			name = HydrogenPeroxide
+			tankType = HydrogenPeroxide
+		}
+
+	}
+}
+
+
 // Engine and tank setup
 @PART[*]:HAS[#SHHypergolic[True]]:AFTER[zzzHypergolUtil_2]
 {
@@ -79,7 +94,7 @@ B9_TANK_TYPE
 			@name = Nitroxide
 		}
 	}
-	// Not present in tanks, but some engines have fuel onboard
+	// Not affecting tanks, but some engines have fuel onboard
 	@RESOURCE[LiquidFuel]
 	{
 		@name = Aerozine
