--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -109,7 +109,7 @@ B9_TANK_TYPE
 	}
 }
 // Template for monoprop engines
-@PART[*]:HAS[#MPHypergolic[True]]:AFTER[zzzHypergolUtil_2]
+@PART[*]:HAS[#SHMonopropellant[True]]:AFTER[zzzHypergolUtil_2]
 {
 	@MODULE[ModuleEngines*],*
 	{
