--- a/GameData/StockalikeHypergols/Patches/Tantares(LV).cfg
+++ b/GameData/StockalikeHypergols/Patches/Tantares(LV).cfg
@@ -1,7 +1,7 @@
 //Mir S5.79 engine
 @PART[eridani_engine_s0_1]:FIRST:NEEDS[Tantares]
 {
-  %MPHypergolic = True
+  %SHMonopropellant = True
 }
 //Fregat
 @PART[TUS_Engine_1]:FIRST:NEEDS[TantaresLV]
@@ -15,7 +15,7 @@
 }
 @PART[AndromedaUS_Engine_1]
 {
-	%MPHypergolic = True
+	%SHMonopropellant = True
 }
 //Briz
 @PART[_delphini_us_engine_s1_1]:FIRST:NEEDS[TantaresLV]
