--- a/GameData/StockalikeHypergols/Patches/knes.cfg
+++ b/GameData/StockalikeHypergols/Patches/knes.cfg
@@ -4,5 +4,5 @@
 }
 @PART[Knes_Hermes_Engine_Mk91|Knes_Service_Module_Viking_09375]:FIRST:NEEDS[Knes]
 {
-  %MPHypergolic = True
+  %SHMonopropellant = True
 }
