--- a/GameData/StockalikeHypergols/setup.cfg
+++ b/GameData/StockalikeHypergols/setup.cfg
@@ -3,7 +3,6 @@ B9_TANK_TYPE
 	name = Hypergolic
 	primaryColor = PurpleBrown
 	secondaryColor = SalmonPink
-	//I picked ugly colors because hypergols are disgusting.
 	tankMass = 0.0004
 	tankCost = 0.9
 	percentFilled = 100
@@ -34,15 +33,7 @@ B9_TANK_TYPE
 		percentFilled = 100
 	}
 }
-@PART[*]:FOR[zzzHypergolUtil_1]
-{
-	%StockalikeHypergolPlaceholder = True
-}
-@PART[*]:FOR[zzzHypergolUtil_2]
-{
-	!StockalikeHypergolPlaceholder = delete
-}
-@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:AFTER[zzzHypergolUtil_1]
+@PART[*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]],[@RESOURCE[LiquidFuel]],[@RESOURCE[Oxidizer]]]:FOR[zzzStockalikeHypergols]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
 	{
@@ -59,7 +50,7 @@ B9_TANK_TYPE
 
 	}
 }
-@PART[bluedog*|Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:AFTER[zzzHypergolUtil_1]:NEEDS[Bluedog_DB]
+@PART[bluedog*|Bluedog*]:HAS[@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]]:FOR[zzzStockalikeHypergols]:NEEDS[Bluedog_DB]
 // they have their own B9 tank types for use with their parts
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[fuelSwitch]]
@@ -80,7 +71,7 @@ B9_TANK_TYPE
 
 
 // Engine and tank setup
-@PART[*]:HAS[#SHHypergolic[True]]:AFTER[zzzHypergolUtil_2]
+@PART[*]:HAS[#SHHypergolic[True]]:AFTER[zzzStockalikeHypergols]
 {
 	// Only need to change name. 2.25:2.75 is the same as 0.9:1.1
 	@MODULE[ModuleEngine*],*
@@ -109,7 +100,7 @@ B9_TANK_TYPE
 	}
 }
 // Template for monoprop engines
-@PART[*]:HAS[#SHMonopropellant[True]]:AFTER[zzzHypergolUtil_2]
+@PART[*]:HAS[#SHMonopropellant[True]]:AFTER[zzzStockalikeHypergols]
 {
 	@MODULE[ModuleEngines*],*
 	{
@@ -130,7 +121,7 @@ B9_TANK_TYPE
 }
 
 // HTP Engines (will treat them as only using HTP regardless of their historical fuels)
-@PART[*]:HAS[#SHPeroxide[True]]:AFTER[zzzHypergolUtil_2]
+@PART[*]:HAS[#SHPeroxide[True]]:AFTER[zzzStockalikeHypergols]
 {
 	@MODULE[ModuleEngine*],*
 	{
