--- a/GameData/StockalikeHypergols/Patches/RCS.cfg
+++ b/GameData/StockalikeHypergols/Patches/RCS.cfg
@@ -1,4 +1,90 @@
-@PART[*]:HAS[#rcsSwitch[True]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+@PART[*]:HAS[@MODULE[ModuleRCSSwitch],MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
+{
+	@description ^= :$: <br><color="green">RCS can accept other fuels.</color>
+	
+	IspVacHTP = 160
+	IspASLHTP = 120
+	@IspVacHTP *= #$IspMult$
+	@IspASHTP *= #$IspMult$
+  
+  	IspVacHyper = 290
+	IspASLHyper = 180
+	@IspVacHyper *= #$IspMult$
+	@IspASHyper *= #$IspMult$
+	
+	@MODULE[ModuleB9PartSwitch:HAS[#switcherDescription[RCS?Mode]]
+	{
+	 	SUBTYPE
+		{
+			name = HydrogenPeroxide
+			title = HydrogenPeroxide
+			primaryColor = LightLightBlue
+			secondaryColor = LightLightBlue
+			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleRCSFX
+				}
+				DATA
+				{
+					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
+					resourceName = HydrogenPeroxide
+					PROPELLANT
+					{
+						name = HydrogenPeroxide
+						ratio = 1
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+					atmosphereCurve
+					{
+						key = #0 $/IspVac$
+						key = #1 $/IspASL$
+						key = 4 0.001
+					}
+				}
+			}
+	  }
+   		 SUBTYPE
+		{
+			name = Hypergolic
+			title = Hypergolic
+			primaryColor = PurpleBrown
+			secondaryColor = SalmonPink
+			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleRCSFX
+				}
+				DATA
+				{
+					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
+					PROPELLANT
+					{
+						name = Aerozine
+						ratio = 0.9
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+         				PROPELLANT
+					{
+						name = Nitroxide
+						ratio = 1.1
+						resourceFlowMode = STAGE_PRIORITY_FLOW
+					}
+					atmosphereCurve
+					{
+						key = #0 $/IspVacHyper$
+						key = #1 $/IspASLHyper$
+						key = 4 0.001
+					}
+				}
+			}
+	  }
+}
+@PART[*]:HAS[@MODULE[ModuleRCSSwitch],!MODULE[B9PartSwitch:HAS[#switcherDescription[RCS?Mode]]]]:NEEDS[B9PartSwitch]:FOR[zzzStockalikeHypergols]
 {
 	IspVac = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,0[1, ]$ // get vac Isp number
 	IspASL = #$MODULE[ModuleRCSFX]/atmosphereCurve/key,1[1, ]$ // get ASL Isp number
@@ -11,18 +97,16 @@
 	@IspMult = #$IspMult[0,.]$ // regex truncate, unknown behavior but used in RO
 	@IspMult /= 100
   
-  IspVacHTP = 160
+  	IspVacHTP = 160
 	IspASLHTP = 120
 	@IspVacHTP *= #$IspMult$
 	@IspASHTP *= #$IspMult$
   
-  IspVacHyper = 290
+  	IspVacHyper = 290
 	IspASLHyper = 180
 	@IspVacHyper *= #$IspMult$
 	@IspASHyper *= #$IspMult$
 
-	@description ^= :$: <br><color="green">RCS can accept other fuels.</color>
-	@description = #$description$ \n\n<color=#ff0000>This part has upgrades in $@PARTUPGRADE[rcs1Upgrade]/techRequired$ & $@PARTUPGRADE[rcs2Upgrade]/techRequired$!</color> 
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -61,75 +145,7 @@
 					}
 				}
 			}
-	  }
-    SUBTYPE
-		{
-			name = HydrogenPeroxide
-			title = HydrogenPeroxide
-			primaryColor = LightLightBlue
-			secondaryColor = LightLightBlue
-			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
-			MODULE
-			{
-				IDENTIFIER
-				{
-					name = ModuleRCSFX
-				}
-				DATA
-				{
-					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
-					resourceName = HydrogenPeroxide
-					PROPELLANT
-					{
-						name = HydrogenPeroxide
-						ratio = 1
-						resourceFlowMode = STAGE_PRIORITY_FLOW
-					}
-					atmosphereCurve
-					{
-						key = #0 $/IspVac$
-						key = #1 $/IspASL$
-						key = 4 0.001
-					}
-				}
-			}
-	  }
-    SUBTYPE
-		{
-			name = Hypergolic
-			title = Hypergolic
-			primaryColor = PurpleBrown
-			secondaryColor = SalmonPink
-			descriptionDetail = #HydrogenPeroxide<br><b>Isp:</b> $/IspASLHTP$ / $/IspVacHTP$ s.
-			MODULE
-			{
-				IDENTIFIER
-				{
-					name = ModuleRCSFX
-				}
-				DATA
-				{
-					thrusterPower = #$/MODULE[ModuleRCSFX]/thrusterPower$
-					PROPELLANT
-					{
-						name = Aerozine
-						ratio = 0.9
-						resourceFlowMode = STAGE_PRIORITY_FLOW
-					}
-         	PROPELLANT
-					{
-						name = Nitroxide
-						ratio = 1.1
-						resourceFlowMode = STAGE_PRIORITY_FLOW
-					}
-					atmosphereCurve
-					{
-						key = #0 $/IspVacHyper$
-						key = #1 $/IspASLHyper$
-						key = 4 0.001
-					}
-				}
-			}
-	  }
+	   }
+   
   }
 }
